@@ -24,6 +24,7 @@ Current git version
   * New attribute 'decorated' to disable window decorations
   * The cursor shape now indicates resize options.
   * New setting 'ellipsis'
+  * Floating clients can now be dragged between monitors via the mouse
   * Frames can be simultaneously resized in x and y direction with the mouse.
   * Bug fixes:
     - Update floating geometry if a client's size hints change
